# dr

./: .editorconfig  .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  TODO.org  build.sh  configure.ac
build-aux/: .gitignore
lib/: .gitignore  ChangeLog  Makefile.am  cli.h  dir.c  dir.h  gettext.h  str.c  str.h
po/: .gitignore  ChangeLog  Makevars  POTFILES.in  dr.pot  fr.po
src/: .gitignore  ChangeLog  Makefile.am  main.c
